<resources>
    <string name="app_name">FridgeBuddy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_fridge">My Fridge</string>
    <string name="fridge_buddy">Fridge Buddy</string>
    <string name="inventory">Inventory</string>
    <string name="shopping_list">Shopping List</string>
    <string name="todo">TODO</string>
    <string name="calendar">Calendar</string>
    <string name="fridge_inventory">Fridge Inventory</string>
    <string name="button">Button</string>
    <string name="scan_now"><![CDATA[Scan Now >]]></string>
    <string name="add_item"><![CDATA[Add Item >]]></string>
    <string name="use_camera_to_scan_your_food_products">Use camera to scan your food products</string>
    <string name="track_expiration_dates_and_quantity">Track expiration dates and quantity</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="title_activity_scan">ScanActivity</string>

    <!-- Array for each day of the month (1-31) -SM -->
    <string-array name="day_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <!-- Array for each month in a year -SM -->
    <string-array name="month_name">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Corresponding month values -SM -->
    <string-array name="month_values">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


    <!-- Zack Test -->
    <string name="barcode_result" translatable="false">Barcode detected.\n%1$s</string>
    <string name="error_scanner_cancelled" translatable="false">Code scanner is cancelled.</string>
    <string name="error_camera_permission_not_granted" translatable="false">Camera permission is not granted.</string>
    <string name="error_app_name_unavailable" translatable="false">App name is not set.</string>
    <string name="error_default_message" translatable="false">Failed to scan code: %1$s</string>
    <string name="home">Home</string>
    <string name="scan_barcode1">Scan Barcode</string>
    <string name="scan_barcode2">Scan Barcode</string>
    <string name="quantity">Quantity</string>
    <string name="product_name">Product Name</string>
    <string name="or_enter_manually">Or enter manually</string>
    <string name="month">Month</string>
    <string name="notification_permission_message">Notifications allow us to remind you when your food is nearing its expiration date</string>
    <string name="new_item">New Item</string>
    <string name="add_new_item">Add New Item</string>
    <string name="title">Title</string>
    <string name="itemtitle">ItemTitle</string>
    <string name="add">ADD</string>
    <string name="x">X</string>
    <string name="upc">UPC (optional)</string>
    <string name="tracks_expiration_dates">Tracks expiration dates</string>

    <!-- claire add -->
    <string-array name="food_item_name">
        <item>Bread</item>
        <item>Milk</item>
        <item>Peach</item>
        <item>Hot Dogs</item>
        <item>Cookies</item>
        <item>Brie Cheese</item>
    </string-array>

    <string-array name="month_expiry_date">
    <item>12</item>
        <item>11</item>
        <item>10</item>
        <item>09</item>
        <item>08</item>
        <item>07</item>
        <item>06</item>
        <item>05</item>
        <item>04</item>
        <item>03</item>
        <item>02</item>
        <item>01</item>
    </string-array>

    <integer-array name="day_expiry_date">
        <item>22</item>   <item>23</item>  <item>24</item>  <item>25</item>
        <item>21</item>  <item>26</item>
        <item>20</item>
        <item>19</item>
        <item>18</item>
        <item>17</item>
        <item>16</item>
        <item>15</item>
        <item>14</item>
        <item>13</item>
        <item>12</item>
        <item>11</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>07</item>
        <item>06</item>
        <item>05</item>
        <item>04</item>
        <item>03</item>
        <item>02</item>
        <item>01</item>
    </integer-array>
    <integer-array name="quantity">
        <item>1</item>
        <item>2</item>
    </integer-array>

</resources>






