<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icons8_fridge_50"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/icons8_picnic_24"
        android:title="@string/inventory" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/icons8_barcode_scanner_64"
        android:title="@string/scan_barcode" />
    <item
        android:id="@+id/navigation_ShoppingList"
        android:icon="@drawable/baseline_shopping_bag_24"
        android:title="@string/shopping_list" />

</menu>